# ideal_aoc_rust

./: README.md  blogpost.md
aoc_bin_per_day/: Cargo.toml
aoc_module_per_day/days/: Cargo.toml
aoc_module_per_day/days/src/: common.rs  main.rs  solver.rs
aoc_module_per_day/days/src/day01/: mod.rs
aoc_module_per_day/days/src/day02/: mod.rs
aoc_module_per_day/days/src/day03/: mod.rs
aoc_module_per_day/days/src/day04/: mod.rs
aoc_module_per_day/days/src/day05/: mod.rs
aoc_project_per_day/common/: Cargo.toml
aoc_project_per_day/common/src/: lib.rs
aoc_project_per_day/day01/: Cargo.toml
aoc_project_per_day/day01/src/: main.rs
aoc_project_per_day/day02/: Cargo.toml
aoc_project_per_day/day02/src/: main.rs
aoc_project_per_day/day03/: Cargo.toml
aoc_project_per_day/day03/src/: main.rs
aoc_project_per_day/day04/: Cargo.toml
aoc_project_per_day/day04/src/: main.rs
aoc_project_per_day/day05/: Cargo.toml
aoc_project_per_day/day05/src/: main.rs
aoc_workspace/days_ws/: Cargo.toml
aoc_workspace/days_ws/common/: Cargo.toml
aoc_workspace/days_ws/common/src/: lib.rs
aoc_workspace/days_ws/day01/: Cargo.toml
aoc_workspace/days_ws/day01/src/: main.rs
aoc_workspace/days_ws/day02/: Cargo.toml
aoc_workspace/days_ws/day02/src/: main.rs
aoc_workspace/days_ws/day03/: Cargo.toml
aoc_workspace/days_ws/day03/src/: main.rs
aoc_workspace/days_ws/day04/: Cargo.toml
aoc_workspace/days_ws/day04/src/: main.rs
aoc_workspace/days_ws/day05/: Cargo.toml
aoc_workspace/days_ws/day05/src/: main.rs
