[package]
name = "day04"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }

[dev-dependencies]
common = { path = "../common", features = [ "test-utils" ] }
